Don't flush out reflow while scrolling.  Possible fix for crash bug 281173, r+sr=roc, a=caillon.